<resources>
    <string name="termosUso">Eu li e aceito os <a href="https://www.temros.com.br">termos e condições de uso</a></string>
    <string name="privacy">Eu li e aceito a <a href="https://www.temros.com.br">política de privacidade</a></string>
    <string name="app_name">Mr. Delivery</string>
    <string name="app_exit">Sair do aplicativo</string>
    <string name="endereco">Endereço</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-Mail</string>
    <string name="nome">Nome</string>
    <string name="title_conta">Conta</string>
    <string name="title_notifications">Notificações</string>
    <string name="configurar_notificação_push">Configurar notificação Push</string>
    <string name="formato_da_data">Formato da data e hora</string>
    <string name="sempre_que_seu_pedido_atualizar_voce_sera_notificado">Sempre que seu pedido atualizar não será notificado</string>
    <string name="sempre_que_seu_pedido_atualizar_voce_nao_sera_notificado">Sempre que seu pedido atualizar você não será notificado</string>
    <string name="sem_cupons">Você ainda não possui cupons</string>
    <string name="sem_historicos">Você não possui históricos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sem_cardapio_secundario">Este lanche não esta disponível no momento</string>
    <string name="sem_cardapio_principal">Não há lanches disponíveis</string>
    <string name="cupom">Cupom</string>
    <string name="frete_distancia">Entrega + Distância</string>
    <string name="add_cupom">Adicionar cupom</string>
    <string name="remove_cupom">Remover cupom</string>
    <string name="frete">Entrega</string>
    <string name="time_prevision">Previsão de entrega:</string>
    <string name="distancia">Distância</string>
    <string name="forma_pagamento">Forma de pagamento</string>
    <string name="cartao_credito">Cartão de crédito</string>
    <string name="cartao_debito">Cartão de débito</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="troco">Troco para:</string>
    <string name="editar">Editar</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="carrinho_vazio">Nada no carrinho</string>
    <string name="erro_localizar_pedido">Este pedido foi pagado ou não esta mais disponível no nosso serviço</string>
    <string name="relatar_problemas">Relatar um problema</string>
    <string name="pedido_recebido">Já recebi o pedido</string>
    <string name="motivo_cancelamento">Ver o motivo do cancelamento</string>
    <string name="pedido_alterado">Seu pedido foi alterado, veja aqui</string>
    <string name="previsao_entrega">Previsão de entrega as:</string>
    <string name="endereco_entrega">Endereço para entrega</string>
    <string name="cupom_desconto">Cupom de desconto</string>
    <string name="cupom_frete_grates">Cupom entrega grátis</string>
    <string name="de_desconto">de desconto</string>
    <string name="cupom_copiado">Cupom copiado!</string>
    <string name="disponivel">Disponível</string>
    <string name="indisponivel">Indisponível</string>
    <string name="pedido_cancelado">Pedido cancelado</string>
    <string name="pedido_entregue">Pedido entregue</string>
    <string name="e_mais">" e mais "</string>
    <string name="todo">TODO</string>
    <string name="adicionar_ao_carrinho">Adicionar ao carrinho</string>
    <string name="deletar_do_historico">Apagar dos históricos</string>
    <string name="sem_anuncios">Sem anúncios</string>
    <string name="error_layout">Falha ao entrar nesta pagina</string>
    <string name="escolha">escolha</string>
    <string name="selecione">selecione</string>
    <string name="bedida">bedida</string>
    <string name="sabo">sabo</string>
    <string name="e_nescessario_que">É nescessário que</string>
    <string name="e_nescessario_voce">É nescessário você</string>
    <string name="e_nescessario_voce_seleciona_uma">É nescessário você seleciona uma</string>
    <string name="para_continuar"> para continuar</string>
    <string name="para_continuar_vc_selecione_ate">para continuar, você pode selecionar até</string>
    <string name="e_nescessario">É nescessário</string>
    <string name="e_nescessario_voce_selecione_um">É nescessário você seleciona um</string>
    <string name="sabor">sabor</string>
    <string name="bebidas">bebidas</string>
    <string name="selaciona">selaciona</string>
    <string name="escolar">escolar</string>
    <string name="itens">itens</string>
    <string name="item">item</string>
    <string name="error_adicionar_carrinho">Não conseguimos adicionar ao carrinho</string>
    <string name="selecione_para_continuar">É preciso selecionar algo para continuar com seu pedido</string>
    <string name="continuar_comprando">Continuar comprando</string>
    <string name="ir_ao_carrinho">Ir para o carrinho</string>
    <string name="msg_adicionado_carrinho">Já esta adicionado ao seu carrinho, deseja continuar adicionando ou finalizar o pedido?</string>
    <string name="carrinho">Carrinho</string>
    <string name="importante">Importante</string>
    <string name="carrinho_erro_conexao">Não há uma conexão!</string>
    <string name="mensagem_estabelecimento_fechado">O estabelecimento se encontra fechado no momento, veja os horaios de funcionamento e tente novamente quando tiver aberto, obrigado pela atenção.</string>
    <string name="segunda">Segunda</string>
    <string name="domingo">Domingo</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">"Sábado "</string>
    <string name="fechado">Fechado</string>
    <string name="gps_nescessario">É preciso que você ative seu GPS para conserguimos saber sua localização.</string>
    <string name="erro_gps">Por conta de um problema com o sistema de localização, não conseguimos se conectar. Feche o app, desliga e liga o GPS e tente novamente.</string>
    <string name="erro_gps_distancia">"Infelizmente o novos serviços não estão disponíveis nesse local, entregamos ate "</string>
    <string name="erro_gps_distancia_2">e alguns metros, você esta fora do alcance.</string>
    <string name="frete_gratis">Entrega Grátis</string>
    <string name="aguarde">Aguarde…</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="minutos">minutos</string>
    <string name="codigo_error">Digite um código de 6 digitos</string>
    <string name="cupom_nao_existe">O cupom digitado não existe</string>
    <string name="cupom_existe">Cupom encontrado</string>
    <string name="codigo_desativado">O cupom digitado não esta mais disponível</string>
    <string name="cupom_type_desconto">Seu cupom esta ativado com um desconto de</string>
    <string name="cupom_type_frete_grates">Seu cupom de entrega grátis esta ativado</string>
    <string name="cupom_desconto_minumo_valor">Este cupom de desconto só pode ser usado com um valor maior que</string>
    <string name="error_pagamento_selecionar">Selecione uma forma de pagamento</string>
    <string name="meg_pedido_enviado">O seu pedido foi enviado com sucesso!</string>
    <string name="falha_enviar_pedido">Não foi possivel enviar seu pedido</string>
    <string name="clique_para_sair">Clique novamente para sair!</string>
    <string name="cancelamento_pedido">Solicitação de cancelamento enviada</string>
    <string name="pedido_em_trasito">Seu pedido está a caminho</string>
    <string name="pedido_preparando">Seu pedido está sendo preparado.</string>
    <string name="pedido_entregue_success">Seu pedido foi entregue com sucesso</string>
    <string name="pedido_cancelado_success">Seu pedido foi cancelado</string>
    <string name="pedido_n_chegou">Meu pedido ainda não chegou</string>
    <string name="pedido_cancelar">Cancelar pedido</string>
    <string name="ligar_estabelecimento">Ligar para o estabelecimento</string>
    <string name="chamar_whastapp">Chama no WhatsApp</string>
    <string name="ir_ao_estabelecimento">Ir ao estabelecimento</string>
    <string name="pedido_atrasado">Pedido atrasado</string>
    <string name="pedido_atrasado_msg">Deseja relatar ao estabelecimento que o seu pedido esta atrasado?</string>
    <string name="pedido_nao_atrasado">"Percebi que o seu pedido não esta atrasado, ele ainda esta no prazo de entrega, por favor aguarde seu pedido. "</string>
    <string name="erro_relata_atraso">Não conseguimos relatar seu problema</string>
    <string name="send_relata_atraso">Enviamos um lembrete ao estabelecimento relatando o atraso do pedido.</string>
    <string name="erro_na_conexao">Não conseguimos nos conectar a internet</string>
    <string name="atencao">Atenção</string>
    <string name="msg_cancelar_pedido_dialog">O cancelamento do pedido é irreversível o cliente irá receber um notificação sobre o cancelamento</string>
    <string name="hint_cancelar_pedido_dialog">Digite uma mensagem dizendo o porque do cancelamento</string>
    <string name="voltar">Voltar</string>
    <string name="msg_cancelamento_pelo_cliente">Pedido cancelado pelo cliente</string>
    <string name="digite_msg_cancelamento">Digite a mensagem para continuar</string>
    <string name="send_cancelamento">O seu cancelamento foi enviado ao estabelecimento, aguarde.</string>
    <string name="erro_cancelamento">Não conseguimos enviar o pedido de cancelamento</string>
    <string name="alteracao">Alteração</string>
    <string name="erro_confirmacao">Não conseguimos se conectat</string>
    <string name="msg_cancelamento_confirmacao">Você confirmou o cancelamento</string>
    <string name="msg_confirmacao">O seu pedido foi confirmado</string>
    <string name="recebi">Recebi</string>
    <string name="fechar">Fechar</string>
    <string name="msg_recebi_pedido">Recebeu?… Se você confirmar o recebimento não poderá reverter essa ação.</string>
    <string name="novo_pedido">Novo Pedido</string>
    <string name="novo_pedido_recebido">Você recebeu um novo pedido</string>
    <string name="notification_msg_atraso">O cliente esta relatando um atraso no pedido</string>
    <string name="notification_title_atraso">Pedido atrasado</string>
    <string name="notification_title_cancelamento">"O cliente cancelou o pedido: "</string>
    <string name="notification_msg_cancelamento">Motivo:</string>
    <string name="notification_title_confirma_cancelamento">Cancelamento confirmado</string>
    <string name="notification_msg_confirma_cancelamento">O cliente confirmou o cancelamento</string>
    <string name="notification_title_confirma_recebimento">Cliente recebeu o pedido</string>
    <string name="notification_msg_confirma_recebimento">O cliente confirmou que recebeu o pedido</string>
    <string name="sair_titulo">Sair do aplicativo</string>
    <string name="sair_msg">Se você sair do aplicativo ao retornar vai ser preciso realizar novamente o login.</string>
    <string name="sair_msg_sucesso">Você saiu com sucesso!</string>
    <string name="clique_senha">Clique para substituir a senha</string>
    <string name="falha_settings_info">Falha ao atualizar, tente novamente</string>
    <string name="tente_atualizar_info">Tentando atualizar as informações, aguarde…</string>
    <string name="redefinir">Redefinir</string>
    <string name="redefinir_msg">Assim que confirmar seu e-mail, vamos encaminhar a você um e-mail de recuperação.</string>
    <string name="digite_um_email_valido">Digite um e-mail valido</string>
    <string name="digite_seu_email">Digite seu e-mail</string>
    <string name="sem_conexao">Sem conexão com a internet</string>
    <string name="verificando_email">Estamos verificando seu e-mail</string>
    <string name="numero_telefone">Número de telefone</string>
</resources>