<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/translation"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:textColor="@color/colorWindowBackground"
                style="@style/TextAppearance.AppCompat.Title"
                android:fontFamily="@font/gotham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relatar_problemas"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_pedido_n_chegou"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWindowBackgroundDark"
            android:background="@drawable/bg_btn_relate_grey"
            android:layout_width="match_parent"
            android:text="@string/pedido_n_chegou"
            android:layout_height="48dp"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_pedido_cancelar"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_relate_grey"
            android:textColor="@color/colorWindowBackgroundDark"
            android:layout_width="match_parent"
            android:text="@string/pedido_cancelar"
            android:layout_height="48dp"/>
        <Button
            android:id="@+id/btn_ligar_estabelecimento"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_relate"
            android:layout_width="match_parent"
            android:textColor="@color/colorWindowBackgroundDark"
            android:text="@string/ligar_estabelecimento"
            android:layout_height="48dp"/>
        <Button
            android:id="@+id/btn_chamar_whastapp"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_relate"
            android:layout_width="match_parent"
            android:textColor="@color/colorWindowBackgroundDark"
            android:text="@string/chamar_whastapp"
            android:layout_height="48dp"/>
        <Button
            android:id="@+id/btn_ir_ao_estabelecimento"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_relate"
            android:layout_width="match_parent"
            android:textColor="@color/colorWindowBackgroundDark"
            android:text="@string/ir_ao_estabelecimento"
            android:layout_height="48dp"/>

        <Button
            android:id="@+id/btn_cancelar_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBtnAzul"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:text="@string/cancelar"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"/>
    </LinearLayout>

</RelativeLayout>