<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progress_circular"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:id="@+id/layoutInicio"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/atencao"
                android:fontFamily="@font/gotham"
                android:textColor="@color/colorWindowBackground"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
            <TextView
                android:layout_margin="5dp"
                android:text="@string/msg_cancelar_pedido_dialog"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:fontFamily="@font/gill_sans_mt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/message_cancel"
                android:maxLength="300"
                android:background="@drawable/bg_line_retancula"
                android:layout_width="match_parent"
                android:gravity="top"
                android:padding="10dp"
                android:fontFamily="@font/gill_sans_mt"
                android:hint="@string/hint_cancelar_pedido_dialog"
                android:layout_height="170dp"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_cancelar"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/bg_btn_relate"
                    android:text="@string/voltar"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:textColor="@color/colorWindowBackground"
                    android:layout_height="38dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_comfirmar_cancelamento"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/bg_btn_relate"
                    android:backgroundTint="@color/colorWindowBackground"
                    android:textColor="@color/branco"
                    android:text="@string/confirmar"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_finish"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_margin="5dp"
                android:text="@string/msg_cancelamento_pelo_cliente"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:fontFamily="@font/gill_sans_mt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_finish"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/bg_btn_relate_cancel"
                    android:text="@string/confirmar"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_height="38dp"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.cardview.widget.CardView>