<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/zapUser"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="10dp"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="@string/numero_telefone"
                android:singleLine="true"
                android:inputType="numberSigned"
                android:background="@drawable/bg_editor"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"/>
            <Button
                style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
                android:id="@+id/enter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/confirmar"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>