<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        app:title="@string/cupom"
        app:titleTextColor="@color/branco"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/mRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/vazio"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/cupom_list"/>
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gill_sans_mt"
            android:text="@string/sem_cupons"/>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:id="@+id/lyt_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <app.birdsoft.meurestaurante.widget.ViewLoadingDotsFade
            android:background="@color/colorWindowBackground"
            android:layout_width="50dp"
            android:layout_height="40dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/cancelar"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>

</LinearLayout>